# workshop-github-actions

./: CHANGELOG.md  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/actions/setup-release/: action.yml
.github/workflows/: build-application.yaml  build-container.yaml  build-python.yaml  release.yaml
docs/workshop/: 0-introduction.md  1-prerequisites.md  2-setup-example-project.md  3-secrets-and-variables.md  4-dockerized-example-project.md
python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  scripts.py
python/src/: __init__.py  main.py
python/src/configs/: config_version.py
python/src/docs/: documentation.md  metadata.json
python/src/routers/: router_github.py  router_health.py
python/tests/: test_router_github.py  test_router_health.py
python/tests/results/: test-results.xml
